Basic award index layout made

--- a/app/views/awards/student_view.html.haml
+++ b/app/views/awards/student_view.html.haml
@@ -78,3 +78,6 @@
                     - else
                       %div.btn.btn-success.return.student_rank
                         Return
+%div.row
+  %div.col-sm-12
+    = link_to "Back", awards_path, class: "btn btn-danger"
