--- a/app/views/users/registrations/edit_permissions.html.haml
+++ b/app/views/users/registrations/edit_permissions.html.haml
@@ -19,8 +19,11 @@
               = f.label :director
               = f.check_box :director
             %div.form-group
-              = f.label :recruitment_head
+              = f.label :recruitment_head, "R&R Head"
               = f.check_box :recruitment_head
+            %div.form-group
+              = f.label :recruitment_officer, "R&R Officer"
+              = f.check_box :recruitment_officer
             %div.form-group
               = f.label :recruiter
               = f.check_box :recruiter
