Office postgres sorting hack

--- a/app/views/awards/student_view.html.haml
+++ b/app/views/awards/student_view.html.haml
@@ -12,7 +12,7 @@
         %div.panel-title
           Office
       %div.panel-body
-        = collection_select(:student_office, :office_id, Office.where(hidden: [false,nil]).order(:name), :id, :name, {selected: @office_id}, {class: "form-control", :disabled => !current_user.check_permissions(:edit_user_records)})
+        = collection_select(:student_office, :office_id, Office.where(hidden: [false,nil]).to_a.sort_by{|a| a.name}, :id, :name, {selected: @office_id}, {class: "form-control", :disabled => !current_user.check_permissions(:edit_user_records)})
   %div.col-sm-12
     %div.panel.panel-primary
       %div.panel-heading
