Group GDS By Type

--- a/app/views/seasons/_game_panel.html.haml
+++ b/app/views/seasons/_game_panel.html.haml
@@ -7,7 +7,7 @@
         = game.played_on.strftime("%B %e, %Y")
   %div.panel-collapse.collapse{"aria-labelledby" => "headingOne", :role => "tabpanel", id: "collapse#{index}"}
     %div.panel-body
-      - gds_sorted = game.gds.sort { |a, b| a.student.full_name_reversed <=> b.student.full_name_reversed }
+      - gds_sorted = game.gds.sort { |a, b| a.student.full_name_reversed <=> b.student.full_name_reversed }.group_by { |a| a.gds_type_id }.values.flatten
       - if !gds_sorted.empty?
         %div.row
           %div.col-sm-12
